<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_1" />

    <EditText
        android:id="@+id/edit_id_mobile_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_view_1"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="15dp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    <requestFocus />

    <TextView
        android:id="@+id/text_view_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_4" />

    <EditText
        android:id="@+id/edit_num_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_view_4"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="15dp"
        android:textColorHint="#546E7A"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize">

    </EditText>

    <TextView
        android:id="@+id/text_view_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_3" />

    <EditText
        android:id="@+id/edit_num_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_view_3"
        android:importantForAutofill="no"
        android:inputType=""
        android:padding="15dp"
        android:textColorHint="#546E7A"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize">

    </EditText>

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_2" />

    <EditText
        android:id="@+id/edit_pass_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_view_2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize">

    </EditText>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_settings"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/save_settings"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>