<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:ignore="ScrollViewCount,UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/text_start"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                tools:ignore="ObsoleteLayoutParam" />


            <Button
                android:id="@+id/Button1"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="11sp"
                android:layout_alignBaseline="@+id/Button2"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignBottom="@+id/Button2"
                android:onClick="onClick"
                android:text="@string/gates_open"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded,TouchTargetSizeCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="11sp"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:text="@string/gates_half_open"
                tools:ignore="ObsoleteLayoutParam,RelativeOverlap,RtlHardcoded,TouchTargetSizeCheck,TextSizeCheck,VisualLintButtonSize" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Button2"
                android:layout_centerHorizontal="true"
                android:text="@string/garage"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="11sp"
                android:layout_alignLeft="@+id/Button2"
                android:layout_alignRight="@+id/Button2"
                android:layout_below="@+id/textView3"
                android:onClick="onClick"
                android:text="@string/garage_left"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded,VisualLintButtonSize" />

            <Button
                android:id="@+id/Button4"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="11sp"
                android:layout_alignBaseline="@+id/Button3"
                android:layout_alignLeft="@+id/Button1"
                android:layout_alignBottom="@+id/Button3"
                android:layout_toLeftOf="@+id/Button3"
                android:onClick="onClick"
                android:text="@string/garage_right"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded,VisualLintButtonSize" />


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarMain"
                android:layout_below="@+id/Button4"
                android:layout_centerHorizontal="true"
                android:indeterminate="false"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
